[ALLI-3713] Fix main tabs in ie9. line-height correction for truncate field and tables. fetch throbber fallback icon from finna theme

--- a/themes/finna/css/ie9-and-lower.css
+++ b/themes/finna/css/ie9-and-lower.css
@@ -5,7 +5,7 @@
 }
 /* fallback for non spinning icon */
 .fa-spinner {
-	background: url('../images/throbber.gif') no-repeat;
+	background: url('../../../themes/finna/images/throbber.gif') no-repeat;
 	width: 20px;
 	height: 20px;	
 }
@@ -13,14 +13,19 @@
 	content:'';
 }
 /* line-height bug fix */
-body, th, td {
+th, td, .truncate-field {
 	line-height: 1.5em !important; 
 }
 /* fallback for clear slider area in slider-selection */
 .slider .slider-track, .slider .slider-track .slider-selection {	
 	filter: none;	
 }
-/* fallback for wrong positioning */
-.image-popup-trigger .iconlabel:before {
-	top: 40%;	
+.finna-main-tabs .nav-tabs li, .finna-main-tabs .nav-tabs li a {
+	height: 100%;
+	box-sizing: content-box;	
+}
+@media (max-width: 991px) {
+	.finna-main-tabs .nav-tabs li a {
+		height: 50px;	
+	}
 }
